[gd_scene load_steps=2 format=3 uid="uid://bliu2k4olajxj"]

[ext_resource type="Script" path="res://scripts/ui/dragon_tooltip.gd" id="1"]

[node name="DragonTooltip" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 280.0
offset_bottom = 300.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "Dragon Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "STATS"

[node name="LevelLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Level: 1"

[node name="AttackLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 12
text = "Attack: 0"

[node name="HealthLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 12
text = "Health: 0/0"

[node name="SpeedLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Speed: 0"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "STATUS"

[node name="StateLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "State: Idle"

[node name="HungerLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 12
text = "Hunger: 0%"

[node name="FatigueLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Fatigue: 0%"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ActionsSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ActionsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "ACTIONS"

[node name="FeedButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ActionsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Feed"

[node name="TrainButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ActionsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Train"

[node name="RestButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ActionsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Rest"
